# webreader

./: .gitignore  LICENSE  README.md  index.js  package-lock.json  package.json  pyproject.toml  reader.js  search.js
docs/superpowers/plans/: 2026-03-15-python-rewrite.md  2026-03-15-webreader-mcp.md
docs/superpowers/specs/: 2026-03-15-webreader-mcp-design.md
searxng/: settings.yml  start.sh
src/webreader/: __main__.py  reader.py  search.py  server.py
tests/: reader.test.js  search.test.js
tests/fixtures/: searxng-response.json
